# RAG_system_CI_CD

./: .env.exemple  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: ingest.py  setup.py
src/api/: main.py  middleware.py  schemas.py
src/core/: config.py  embeddings.py  llm.py  vector_store.py
src/data/: evaluation.py  management.py
src/pipeline/: generation.py  ingestion.py  retrieval.py
src/utils/: helpers.py
tests/: test_api.py
