[tool.poetry]
name = "rag-system"
version = "0.1.0"
description = "Production-grade RAG system with CI/CD"
authors = ["RkanGen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
sentence-transformers = "^2.3.0"
qdrant-client = "^1.7.0"
chromadb = "^0.4.22"
litellm = "^1.17.0"
pypdf = "^4.0.0"
python-docx = "^1.1.0"
markdown = "^3.5.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.1.0"
rank-bm25 = "^0.2.2"
prometheus-client = "^0.19.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.0"
celery = "^5.3.0"
httpx = "^0.26.0"
tenacity = "^8.2.3"
sqlalchemy = "^2.0.25"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"